# prototipo

./: .gitattributes  pyproject.toml
.github/workflows/: ci.yml
docs/: README_operativo.md  planner_cli_spec.md  testing_strategy.md
examples/: planner_output.example.json
results/realistic_smoke/: README.md  comparisons.json  realism_checks.json
schema/: planner_global_config.schema.json  planner_manual_sessions.schema.json  planner_plan_output.schema.json  planner_plan_request.schema.json  planner_subjects.schema.json
scripts/: generate_realistic_smoke.py
smoke/: non_golden_smoke_scenarios.md
src/planner/: __init__.py  cli.py  io.py
src/planner/engine/: __init__.py  allocator.py  rebalance.py  replan.py  runner.py  scoring.py  slot_builder.py  workload.py
src/planner/metrics/: __init__.py  collector.py
src/planner/normalization/: __init__.py  config_resolver.py  request.py
src/planner/reporting/: __init__.py  decision_trace.py  reports.py  warnings.py
src/planner/validation/: __init__.py  domain_validator.py  errors.py  request.py  schema_validator.py
tests/integration/: test_pipeline_integration.py
tests/property/: test_planner_properties.py
tests/smoke/: test_non_golden_scenarios.py
tests/unit/: test_allocator_continuity.py  test_core_units.py  test_realistic_smoke_report_builder.py  test_rebalance.py
