[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planner"
version = "0.1.0"
description = "Adaptive study planner CLI"
requires-python = ">=3.11"

[project.scripts]
planner = "planner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
